--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+polkit-qt-1 (0.200.0-4deepin2) unstable; urgency=medium
+
+  * Update deepin patches.
+
+ -- xiangzelong <xiangzelong@deepin.org>  Wed, 21 May 2025 14:47:54 +0800
+
 polkit-qt-1 (0.200.0-4deepin1) unstable; urgency=medium
 
   * add deepin patchs.
